# area

./: .editorconfig  .gitignore  .gitmodules  README.md  SECURITY.md  biome.json  flake.nix  git-hooks.nix
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 0-FEAT.yml  1-BUG.yml  1-REFACTOR.yml
.github/workflows/: linter_check.yml  mirror_commit.yml  mirror_event.yml
back/: .gitignore  default.nix  pyproject.toml
back/app/: config.py  main.py
back/app/api/routes/: __init__.py  auth.py  graph.py  hello.py
back/app/db/: __init__.py  base.py
back/app/db/models/: __init__.py  graph.py  user.py
back/app/schemas/: __init__.py  graph.py  user.py
front/: biome.json  capacitor.config.ts  default.nix  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite-env.d.ts  vite.config.ts
front/android/: .gitignore  build.gradle  composition.nix  default.nix  variables.gradle
front/android/app/: build.gradle
front/android/app/src/main/java/io/github/sigmapitech/: MainActivity.java
front/android/app/src/main/res/values/: strings.xml
front/browser/: index.html  package-lock.json  package.json  vite.config.ts
front/browser/src/: main.tsx
front/mobile/: app.json  biome.json  package-lock.json  package.json
front/src/: App.tsx  index.scss  main.tsx
front/src/auth/: context.tsx
front/src/mobile/: entrypoint.tsx
front/src/routes/graph/: index.tsx
front/src/routes/home/: index.tsx
front/src/routes/login/: auth.scss  index.tsx
front/src/web/: entrypoint.tsx
